# Bee-at-work

./: Animator.cpp  Animator.h  AssetManager.cpp  AssetManager.h  Bee at work.rc  Bee at work.sln  CMakeLists.txt  CMakeLists.txt.bak  Engine.cpp  Engine.h  GameMenu.cpp  GameMenu.h  GameSound.cpp  GameSound.h  HealthBarClass.cpp  HealthBarClass.h  MainMenu.vcxproj  MainMenu.vcxproj.filters  Player.cpp  Player.h  README.md  main.cpp  resource.h
